--- a/config.yaml
+++ b/config.yaml
@@ -8,25 +8,23 @@ buildDrafts: false
 buildFuture: false
 buildExpired: false
 
-googleAnalytics: UA-123-45
-
 minify:
   disableXML: true
   minifyOutput: true
 
+# Read: https://github.com/adityatelange/hugo-PaperMod/wiki/Variables
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  title: ExampleSite
-  description: "ExampleSite description"
+  title: kkato.dev
+  description: "kkato.dev"
   keywords: [Blog, Portfolio, PaperMod]
-  author: Ken Kato
-  # author: ["Me", "You"] # multiple authors
+  author: Ken Kato # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2006"
   defaultTheme: auto # dark, light
   disableThemeToggle: false
 
-  ShowReadingTime: true
+  ShowReadingTime: false
   ShowShareButtons: false
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
@@ -45,42 +43,38 @@ params:
   assets:
     # disableHLJS: true # to disable highlight.js
     # disableFingerprinting: true
-    favicon: "<link / abs url>"
-    favicon16x16: "<link / abs url>"
-    favicon32x32: "<link / abs url>"
-    apple_touch_icon: "<link / abs url>"
-    safari_pinned_tab: "<link / abs url>"
+    favicon: "images/sagarifuji.svg"
+    # favicon16x16: "<link / abs url>"
+    # favicon32x32: "<link / abs url>"
+    # apple_touch_icon: "<link / abs url>"
+    # safari_pinned_tab: "<link / abs url>"
 
   label:
     text: "kkato.dev"
-    icon: /apple-touch-icon.png
-    iconHeight: 35
+    # icon: /apple-touch-icon.png
+    # iconHeight: 35
 
   # profile-mode
-  profileMode:
-    enabled: false # needs to be explicitly set
-    title: ExampleSite
-    subtitle: "This is subtitle"
-    imageUrl: "<img location>"
-    imageWidth: 120
-    imageHeight: 120
-    imageTitle: my image
-    buttons:
-      - name: Posts
-        url: posts
-      - name: Tags
-        url: tags
+  # profileMode:
+  #  enabled: false # needs to be explicitly set
+  #  title: ExampleSite
+  #  subtitle: "This is subtitle"
+  #  imageUrl: "<img location>"
+  #  imageWidth: 120
+  #  imageHeight: 120
+  #  imageTitle: my image
+  #  buttons:
+  #    - name: Posts
+  #      url: posts
+  #    - name: Tags
+  #      url: tags
 
   # home-info mode
   homeInfoParams:
     Title: "kkato.dev"
     Content: "Hi there \U0001F44B
 
-
-    Welcome to my website!
-    
-    
-    "
+    Welcome to my website!"
 
   socialIcons:
     - name: github
@@ -90,21 +84,12 @@ params:
 
   analytics:
     google:
-      SiteVerificationTag: "XYZabc"
-    bing:
-      SiteVerificationTag: "XYZabc"
-    yandex:
-      SiteVerificationTag: "XYZabc"
+      SiteVerificationTag: "G-LN8D5NDXJ6"
 
   cover:
     hidden: true # hide everywhere but not in structured data
     hiddenInList: true # hide on list pages and home
     hiddenInSingle: true # hide on single page
-
-  editPost:
-    URL: "https://github.com/<path_to_repo>/content"
-    Text: "Suggest Changes" # edit text
-    appendFilePath: true # to append file path to Edit link
 
   # for search
   # https://fusejs.io/api/options.html
@@ -152,4 +137,3 @@ markup:
     # guessSyntax: true
     # lineNos: true
     # style: monokai
-
