--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,12 @@ minify:
   disableXML: true
   minifyOutput: true
 
+outputs:
+    home:
+        - HTML
+        - RSS
+        - JSON
+
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/Variables
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
