--- a/config.yaml
+++ b/config.yaml
@@ -51,7 +51,7 @@ params:
   assets:
     # disableHLJS: true # to disable highlight.js
     # disableFingerprinting: true
-    favicon: "images/sagarifuji.svg"
+    # favicon: "images/.svg"
     # favicon16x16: "<link / abs url>"
     # favicon32x32: "<link / abs url>"
     # apple_touch_icon: "<link / abs url>"
