--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
-baseURL: "https://kkato.io/"
-title: kkato.io
+baseURL: "https://kkato.dev/"
+title: kkato.dev
 paginate: 5
 theme: PaperMod
 
@@ -23,8 +23,8 @@ outputs:
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/Variables
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  title: kkato.io
-  description: "kkato.io"
+  title: kkato.dev
+  description: "kkato.dev"
   keywords: [Blog, Portfolio, PaperMod]
   author: Ken Kato # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
@@ -59,7 +59,7 @@ params:
     # safari_pinned_tab: "<link / abs url>"
 
   label:
-    text: "kkato.io"
+    text: "kkato.dev"
     # icon: /apple-touch-icon.png
     # iconHeight: 35
 
@@ -80,7 +80,7 @@ params:
 
   # home-info mode
   homeInfoParams:
-    Title: "kkato.io"
+    Title: "kkato.dev"
     Content: "Hi there \U0001F44B
 
 
